# HDHomeRunEPG-to-XmlTv

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  DOCKER_GUIDE.md  Dockerfile  HDHomeRunEPG_To_XmlTv.py  README.md  REVAMP_SUMMARY.md  docker-compose.yml  generate_m3u_from_xmltv.py  http_server.py  pyproject.toml  run_tvguide.sh
.github/: copilot-instructions.md  release-drafter.yml  release.yml
.github/workflows/: ci-cd.yml  release-drafter.yml
docs/: M3U_CHANNEL_ID_MATCHING_GUIDE.md  RELEASE_GUIDE.md  UHF_APP_SETUP_GUIDE.md
examples/: example.m3u  example_uhf.m3u  example_uhf_corrected.m3u
scripts/: README.md  create_release.sh  cron_job.sh  entrypoint.sh  healthcheck.sh  uhf_epg_diagnostic.py
tests/: __init__.py  test_directory_creation.py  test_http_400_handling.py  test_m3u_xmltv_matching.py  test_xmltv_doctype.py  test_xmltv_format.py
