[project]
name = "hdhomerun-epg-to-xmltv"
version = "2.0.0"
description = "Convert HDHomeRun EPG data to XMLTV format for media servers like Jellyfin"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Incubus Victim" }
]
license = { text = "GPL-3.0-or-later" }
keywords = ["hdhomerun", "epg", "xmltv", "jellyfin", "plex", "iptv", "uhf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "pytz",
    "requests",
    "tzlocal",
    "python-dotenv",
]

[tool.setuptools]
py-modules = [
    "HDHomeRunEPG_To_XmlTv",
    "http_server", 
    "generate_m3u_from_xmltv"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*", "scripts*", "binaries*", "output*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/IncubusVictim/HDHomeRunEPG-to-XmlTv"
Repository = "https://github.com/IncubusVictim/HDHomeRunEPG-to-XmlTv"
Issues = "https://github.com/IncubusVictim/HDHomeRunEPG-to-XmlTv/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy",
    "ruff",
    "black",
    "isort",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["HDHomeRunEPG_To_XmlTv", "http_server", "generate_m3u_from_xmltv"]
omit = [
    "tests/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "output",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"] # allow assert statements in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true

